--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -40,7 +40,9 @@
     }
   },
   "community": {
-    "title": "Från communityn",
+    "title": "Utforska vad som är möjligt",
+    "subtitle": "Se riktiga applikationer byggda med Kliv av utvecklare och skapare världen över",
+    "by": "av",
     "viewAll": "Visa alla",
     "preview": {
       "useAsTemplate": "Använd som mall",
@@ -67,79 +69,79 @@
       "title": "Kraftfulla funktioner för modern utveckling",
       "subtitle": "Allt du behöver för att bygga, distribuera och hantera dina applikationer med AI-assistans.",
       "core": {
-        "title": "コア開発機能",
+        "title": "Kärnfunktioner för utveckling",
         "aiChat": {
           "title": "AI-chattgränssnitt",
-          "description": "KlivのAIとチャットして、自然な言葉でアイデアを説明します。AIは文脈を理解し、あなたが思い描く通りのものを構築します。"
+          "description": "Chatta med Klivs AI för att beskriva dina idéer på vanlig svenska. AI:n förstår sammanhanget och bygger exakt det du föreställer dig."
         },
         "livePreview": {
-          "title": "ライブプレビュー",
-          "description": "チャット中にプレビューウィンドウで変更を即座に確認できます。コンパイルの遅延なしに、アプリがリアルタイムで生まれ変わるのを見ることができます。"
+          "title": "Live-förhandsvisning",
+          "description": "Se dina ändringar direkt i förhandsvisningsfönstret medan du chattar. Titta på din app komma till liv i realtid utan kompileringsförseningar."
         },
         "codeGeneration": {
-          "title": "スマートコード生成",
-          "description": "React、TypeScript、Tailwind CSSを使用してクリーンで保守可能なコードを生成します。すべてのコードは業界のベストプラクティスに従います。"
+          "title": "Smart kodgenerering",
+          "description": "Generera ren, underhållbar kod med React, TypeScript och Tailwind CSS. All kod följer branschens bästa praxis."
         },
         "responsive": {
-          "title": "レスポンシブデザイン",
-          "description": "すべてのアプリはモバイルファーストのレスポンシブデザイン原則で構築され、あらゆるデバイスと画面サイズで完璧な表示を保証します。"
+          "title": "Responsiv design",
+          "description": "Varje app byggs med mobil-först responsiva designprinciper, vilket säkerställer perfekt visning på alla enheter och skärmstorlekar."
         }
       },
       "development": {
-        "title": "開発ツール",
+        "title": "Utvecklingsverktyg",
         "sourceCode": {
-          "title": "ソースコードアクセス",
-          "description": "内蔵のコードビューアーでプロジェクトのソースコードを表示・理解できます。チャットビューとコードビューをシームレスに切り替えられます。"
+          "title": "Källkodsåtkomst",
+          "description": "Visa och förstå ditt projekts källkod med den inbyggda kodvisaren. Växla sömlöst mellan chatt- och kodvyer."
         },
         "debugging": {
-          "title": "AI駆動デバッグ",
-          "description": "Klivはコンソールログにアクセスして問題を自動的にデバッグし、技術的な知識なしに問題を解決するのを支援します。"
+          "title": "AI-driven felsökning",
+          "description": "Kliv kan komma åt konsolloggar och felsöka problem automatiskt, vilket hjälper dig att lösa problem utan teknisk kunskap."
         },
         "iterative": {
-          "title": "反復開発",
-          "description": "段階的に変更を加えます。Klivは複雑な機能を管理しやすい部分に分割することを推奨し、より良い結果を得られます。"
+          "title": "Iterativ utveckling",
+          "description": "Gör ändringar steg för steg. Kliv uppmuntrar att dela upp komplexa funktioner i hanterbara delar för bättre resultat."
         },
         "versionControl": {
-          "title": "バージョン履歴",
-          "description": "ワンクリックでプロジェクトの任意の以前のバージョンに戻すことができます。進捗を失ったり、誤ってアプリを壊したりすることはありません。"
+          "title": "Versionshistorik",
+          "description": "Återgå till vilken tidigare version av ditt projekt som helst med ett enda klick. Förlora aldrig dina framsteg eller förstör din app av misstag."
         }
       },
       "deployment": {
-        "title": "デプロイメントと共有",
+        "title": "Distribution och delning",
         "oneClick": {
-          "title": "ワンクリック公開",
-          "description": "Klivの内蔵ホスティングでアプリを瞬時にウェブにデプロイします。数秒で作品を世界と共有できます。"
+          "title": "Ett-klicks publicering",
+          "description": "Distribuera din app till webben direkt med Klivs inbyggda hosting. Dela din skapelse med världen på sekunder."
         },
         "customDomain": {
-          "title": "カスタムドメイン",
-          "description": "独自のドメイン名をKlivアプリに接続します。SSL証明書を含むプロフェッショナルなホスティング。"
+          "title": "Anpassade domäner",
+          "description": "Anslut ditt eget domännamn till din Kliv-app. Professionell hosting med SSL-certifikat inkluderat."
         },
         "github": {
-          "title": "GitHub統合",
-          "description": "プロジェクトをGitHubにエクスポートし、お好みのツールとワークフローで開発を継続できます。"
+          "title": "GitHub-integration",
+          "description": "Exportera ditt projekt till GitHub och fortsätt utvecklingen med dina föredragna verktyg och arbetsflöden."
         },
         "remix": {
-          "title": "プロジェクトリミックス",
-          "description": "既存のプロジェクトをフォークしてリミックスし、新しいバリエーションを作成します。学習や既存のアイデアの発展に最適です。"
+          "title": "Projektremixing",
+          "description": "Forka och remixa befintliga projekt för att skapa nya variationer. Perfekt för lärande och att bygga vidare på befintliga idéer."
         }
       },
       "technology": {
-        "title": "モダンテクノロジースタック",
+        "title": "Modern teknikstack",
         "react": {
           "title": "React & TypeScript",
-          "description": "最も人気のあるウェブ技術で構築されています。アプリはUIにReact、型安全性にTypeScriptを使用します。"
+          "description": "Byggt på de mest populära webbteknologierna. Dina appar använder React för UI och TypeScript för typsäkerhet."
         },
         "tailwind": {
           "title": "Tailwind CSS",
-          "description": "美しくレスポンシブなスタイリング。カスタムCSSを書くことなく、素晴らしいデザインを作成できます。"
+          "description": "Vacker, responsiv styling med Tailwind CSS. Skapa fantastiska designer utan att skriva anpassad CSS."
         },
         "shadcn": {
-          "title": "Shadcn UIコンポーネント",
-          "description": "迅速な開発のための事前構築されたアクセシブルなUIコンポーネントの包括的なライブラリへのアクセス。"
+          "title": "Shadcn UI-komponenter",
+          "description": "Tillgång till ett omfattande bibliotek av förbyggda, tillgängliga UI-komponenter för snabb utveckling."
         },
         "supabase": {
-          "title": "Supabase統合",
-          "description": "ネイティブSupabase統合でデータベース、認証、バックエンド機能を追加します。"
+          "title": "Supabase-integration",
+          "description": "Lägg till databaser, autentisering och backend-funktionalitet med inbyggd Supabase-integration."
         }
       }
     }
@@ -236,8 +238,8 @@
         "description": "Ditt arbete påverkar direkt tusentals skapare och entreprenörer som bygger sina drömmar."
       },
       "innovation": {
-        "title": "イノベーション",
-        "description": "私たちはAIと開発ツールの最前線にいて、可能性の境界を押し広げています。"
+        "title": "Innovation",
+        "description": "Vi är i framkant av AI och utvecklingsverktyg och driver gränserna för vad som är möjligt."
       }
     },
     "openings": {
@@ -374,5 +376,11 @@
     "continueWithMicrosoft": "Fortsätt med Microsoft",
     "signInWithPasskey": "Logga in med passkey",
     "continueWithPasskey": "Fortsätt med passkey"
+  },
+  "Get Started Free": "Kom igång gratis",
+  "landing": {
+    "attribution": "Detta innehåll genererades av Kliv AI, baserat på 20+ produktmönster inom arbetsflödesautomatisering som vi byggt för kunder.",
+    "usePrompt": "Använd denna prompt",
+    "improvementDescription": "När du har ditt grundläggande automatiseringsverktyg kan du förbättra det med dessa ytterligare funktioner"
   }
 }
