Add 'inspiration' key to English localization file

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -270,6 +270,7 @@
     "product": "Product",
     "features": "Features",
     "pricing": "Pricing",
+    "inspiration": "Inspiration",
     "company": "Company",
     "about": "About",
     "careers": "Careers",
