Add inspiration page with loading state and localization support

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -270,6 +270,7 @@
     "product": "プロダクト",
     "features": "機能",
     "pricing": "料金",
+    "inspiration": "インスピレーション",
     "company": "会社",
     "about": "会社概要",
     "careers": "採用情報",
@@ -382,5 +383,18 @@
     "attribution": "このコンテンツは、ワークフロー自動化分野で顧客向けに構築した20以上の製品パターンを基に、Kliv AIによって生成されました。",
     "usePrompt": "このプロンプトを使用",
     "improvementDescription": "基本的な自動化ツールができたら、これらの追加機能で強化できます"
+  },
+  "inspiration": {
+    "badge": "インスピレーション",
+    "title": "アプリのアイデア",
+    "subtitle": "あなたの次のプロジェクトのインスピレーションを得るために、カテゴリ別に整理されたアプリのコンセプトを探索してください。",
+    "searchPlaceholder": "アプリを検索...",
+    "allCategories": "すべてのカテゴリ",
+    "noAppsFound": "検索に一致するアプリが見つかりませんでした。",
+    "viewDetails": "詳細を見る",
+    "loadingInspiration": "インスピレーションを読み込み中...",
+    "appsCount": "{{count}}個のアプリアイデア",
+    "categoriesCount": "{{count}}個のカテゴリ",
+    "description": "各アイデアには詳細な機能と実装の提案が含まれています。"
   }
 }
