--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -270,6 +270,7 @@
     "product": "Produkt",
     "features": "Funktioner",
     "pricing": "Priser",
+    "inspiration": "Inspiration",
     "company": "Företag",
     "about": "Om oss",
     "careers": "Karriärer",
@@ -382,5 +383,18 @@
     "attribution": "Detta innehåll genererades av Kliv AI, baserat på 20+ produktmönster inom arbetsflödesautomatisering som vi byggt för kunder.",
     "usePrompt": "Använd denna prompt",
     "improvementDescription": "När du har ditt grundläggande automatiseringsverktyg kan du förbättra det med dessa ytterligare funktioner"
+  },
+  "inspiration": {
+    "badge": "Inspiration",
+    "title": "App-idéer",
+    "subtitle": "Utforska appkoncept organiserade efter kategori för att inspirera ditt nästa projekt.",
+    "searchPlaceholder": "Sök appar...",
+    "allCategories": "Alla kategorier",
+    "noAppsFound": "Inga appar hittades som matchar din sökning.",
+    "viewDetails": "Visa detaljer",
+    "loadingInspiration": "Laddar inspiration...",
+    "appsCount": "{{count}} app-idéer",
+    "categoriesCount": "{{count}} kategorier",
+    "description": "Varje idé kommer med detaljerade funktioner och implementeringsförslag."
   }
 }
