Add inspiration section with translated categories and UI updates

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -388,13 +388,24 @@
     "badge": "インスピレーション",
     "title": "アプリのアイデア",
     "subtitle": "あなたの次のプロジェクトのインスピレーションを得るために、カテゴリ別に整理されたアプリのコンセプトを探索してください。",
-    "searchPlaceholder": "アプリを検索...",
+    "searchPlaceholder": "アイデアを検索...",
     "allCategories": "すべてのカテゴリ",
-    "noAppsFound": "検索に一致するアプリが見つかりませんでした。",
+    "noAppsFound": "検索に一致するアイデアが見つかりませんでした。",
     "viewDetails": "詳細を見る",
     "loadingInspiration": "インスピレーションを読み込み中...",
     "appsCount": "{{count}}個のアプリアイデア",
     "categoriesCount": "{{count}}個のカテゴリ",
-    "description": "各アイデアには詳細な機能と実装の提案が含まれています。"
+    "description": "各アイデアには詳細な機能と実装の提案が含まれています。",
+    "categories": {
+      "Analytics": "分析",
+      "Business": "ビジネス",
+      "Business Tools": "ビジネスツール",
+      "Calendar And Scheduling": "カレンダー・スケジュール",
+      "Community": "コミュニティ",
+      "Financial Services And Banking": "金融サービス",
+      "Health And Wellness": "健康・ウェルネス",
+      "Hospitality": "ホスピタリティ",
+      "Lifestyle": "ライフスタイル"
+    }
   }
 }
