--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -388,13 +388,24 @@
     "badge": "Inspiration",
     "title": "App-idéer",
     "subtitle": "Utforska appkoncept organiserade efter kategori för att inspirera ditt nästa projekt.",
-    "searchPlaceholder": "Sök appar...",
+    "searchPlaceholder": "Sök idéer...",
     "allCategories": "Alla kategorier",
-    "noAppsFound": "Inga appar hittades som matchar din sökning.",
+    "noAppsFound": "Inga idéer hittades som matchar din sökning.",
     "viewDetails": "Visa detaljer",
     "loadingInspiration": "Laddar inspiration...",
     "appsCount": "{{count}} app-idéer",
     "categoriesCount": "{{count}} kategorier",
-    "description": "Varje idé kommer med detaljerade funktioner och implementeringsförslag."
+    "description": "Varje idé kommer med detaljerade funktioner och implementeringsförslag.",
+    "categories": {
+      "Analytics": "Analys",
+      "Business": "Företag",
+      "Business Tools": "Företagsverktyg",
+      "Calendar And Scheduling": "Kalender & Schemaläggning",
+      "Community": "Gemenskap",
+      "Financial Services And Banking": "Finansiella tjänster",
+      "Health And Wellness": "Hälsa & Välbefinnande",
+      "Hospitality": "Gästfrihet",
+      "Lifestyle": "Livsstil"
+    }
   }
 }
