--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -383,7 +383,9 @@
   "landing": {
     "attribution": "Detta innehåll genererades av Kliv AI, baserat på 20+ produktmönster inom arbetsflödesautomatisering som vi byggt för kunder.",
     "usePrompt": "Använd denna prompt",
-    "improvementDescription": "När du har ditt grundläggande automatiseringsverktyg kan du förbättra det med dessa ytterligare funktioner"
+    "improvementDescription": "När du har ditt grundläggande automatiseringsverktyg kan du förbättra det med dessa ytterligare funktioner",
+    "buildPrompt": "Ange bara din {{topic}}-idé i textrutan så bygger Kliv den åt dig",
+    "askAiToBuild": "Be AI att bygga"
   },
   "inspiration": {
     "badge": "Inspiration",
