--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -383,7 +383,9 @@
   "landing": {
     "attribution": "このコンテンツは、ワークフロー自動化分野で顧客向けに構築した20以上の製品パターンを基に、Kliv AIによって生成されました。",
     "usePrompt": "このプロンプトを使用",
-    "improvementDescription": "基本的な自動化ツールができたら、これらの追加機能で強化できます"
+    "improvementDescription": "基本的な自動化ツールができたら、これらの追加機能で強化できます",
+    "buildPrompt": "テキストボックスに{{topic}}のアイデアを入力するだけで、Klivが構築します",
+    "askAiToBuild": "AIに構築を依頼"
   },
   "inspiration": {
     "badge": "インスピレーション",
