--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -399,6 +399,7 @@
     "appsCount": "{{count}} app ideas",
     "categoriesCount": "{{count}} categories",
     "description": "Each idea comes with detailed features and implementation suggestions.",
+    "categorySubtitle": "Explore app concepts in the {{category}} category to inspire your next project.",
     "categories": {
       "Analytics": "Analytics",
       "Business": "Business",
