--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -399,6 +399,7 @@
     "appsCount": "{{count}}個のアプリアイデア",
     "categoriesCount": "{{count}}個のカテゴリ",
     "description": "各アイデアには詳細な機能と実装の提案が含まれています。",
+    "categorySubtitle": "{{category}}カテゴリのアプリコンセプトを探索して、次のプロジェクトのインスピレーションを得てください。",
     "categories": {
       "Analytics": "分析",
       "Business": "ビジネス",
