--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -25,7 +25,7 @@
       "todo": "En att-göra-app med kategorier",
       "dashboard": "En försäljningsdashboard med diagram",
       "blog": "En personlig blogg med kommentarer",
-      "todoFull": "Skapa en vacker att-göra-applikation med dra-och-släpp-funktionalitet, färgkodade kategorier som Arbete, Personligt och Shopping, och smidiga animationer. Inkludera funktioner som prioritetsnivåer, förfallodatum och en ren dashboard som visar dina framsteg. Gör den responsiv så att den fungerar perfekt på både skrivbord och mobila enheter.",
+      "todoFull": "Skapa en vacker att-göra-applikation med dra-och-släpp-funktionalitet, färgkodade kategorier som Arbete, Personligt och Shopping, och smidiga animationer. Inkludera funktioner som prioritetsnivåer, förfallerodatum och en ren dashboard som visar dina framsteg. Gör den responsiv så att den fungerar perfekt på både skrivbord och mobila enheter.",
       "dashboardFull": "Bygg en fantastisk försäljningsanalys-dashboard med interaktiva diagram som visar intäktstrender, topppresterande produkter och kundinsikter. Inkludera vackra datavisualiseringar med stapeldiagram, linjediagram och cirkeldiagram som uppdateras i realtid. Lägg till filter för olika tidsperioder och exportfunktionalitet för rapporter.",
       "blogFull": "Designa en modern personlig blogg med en ren, tidskriftsstil layout med rik textredigering, bildgallerier och sociala delningsknappar. Inkludera ett kommentarsystem där läsare kan engagera sig med dina inlägg, taggbaserad navigering och en sökfunktion. Gör den SEO-vänlig med vacker typografi och snabba laddningstider."
     },
@@ -399,6 +399,7 @@
     "appsCount": "{{count}} app-idéer",
     "categoriesCount": "{{count}} kategorier",
     "description": "Varje idé kommer med detaljerade funktioner och implementeringsförslag.",
+    "categorySubtitle": "Utforska appkoncept i kategorin {{category}} för att inspirera ditt nästa projekt.",
     "categories": {
       "Analytics": "Analys",
       "Business": "Företag",
