Update localization files for Swedish, English, and Japanese

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1,3 +1,4 @@
+
 {
   "nav": {
     "features": "機能",
@@ -282,7 +283,7 @@
     "privacy": "プライバシーポリシー",
     "terms": "利用規約",
     "security": "セキュリティ",
-    "copyright": "© 2024 Kliv. All rights reserved."
+    "copyright": "このウェブサイトはKliv.devで構築・ホスティングされています"
   },
   "planContent": {
     "products": {
@@ -302,6 +303,9 @@
       "Professional": "無料プランの全て、さらに：\n* 無制限プロジェクト\n* 追加の日次クレジット\n* 優先サポート\n* カスタムドメイン\n* 無制限ユーザー",
       "Custom": "* シングルサインオン（SAML）\n* カスタム統合\n* 専用サポート\n* SLA保証"
     }
+  },
+  "common": {
+    "loading": "読み込み中..."
   },
   "tenantSignup": {
     "getStarted": "サインアップ",
@@ -331,7 +335,8 @@
     "googleAuthError": "Googleで認証できませんでした",
     "ssoError": "この組織はすでにアカウントが設定されています。<a href=\"/!saml/login/{{domain}}\">こちら</a>をクリックしてサインインするか、システム管理者にお問い合わせください。",
     "userExistsError": "このメールアドレスのアカウントは既に存在します。ログイン画面のパスワード回復機能でパスワードをリセットできます。",
-    "next": "次へ"
+    "next": "次へ",
+    "back": "戻る"
   },
   "login": {
     "welcomeBack": "おかえりなさい",
