--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -1,3 +1,4 @@
+
 {
   "nav": {
     "features": "Funktioner",
@@ -282,7 +283,7 @@
     "privacy": "Integritetspolicy",
     "terms": "Användarvillkor",
     "security": "Säkerhet",
-    "copyright": "© 2024 Kliv. Alla rättigheter förbehållna."
+    "copyright": "Denna webbplats är byggd och hostad med Kliv.dev"
   },
   "planContent": {
     "products": {
@@ -302,6 +303,9 @@
       "Professional": "Allt i Gratis, plus:\n* Obegränsade projekt\n* Ytterligare dagliga krediter\n* Prioriterad support\n* Anpassade domäner\n* Obegränsade användare",
       "Custom": "* Enkel inloggning (SAML)\n* Anpassade integrationer\n* Dedikerad support\n* SLA-garanti"
     }
+  },
+  "common": {
+    "loading": "Laddar..."
   },
   "tenantSignup": {
     "getStarted": "Registrera dig",
@@ -331,7 +335,8 @@
     "googleAuthError": "Det gick inte att autentisera med Google",
     "ssoError": "Din organisation är redan konfigurerad med ett konto. Klicka <a href=\"/!saml/login/{{domain}}\">här</a> för att logga in eller kontakta din systemadministratör.",
     "userExistsError": "Det finns redan en användare registrerad med den e-postadressen. Du kan använda funktionen för lösenordsåterställning på inloggningsskärmen för att återställa ditt lösenord.",
-    "next": "Nästa"
+    "next": "Nästa",
+    "back": "Tillbaka"
   },
   "login": {
     "welcomeBack": "Välkommen tillbaka",
