--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -283,7 +283,7 @@
     "privacy": "Privacy Policy",
     "terms": "Terms of Service",
     "security": "Security",
-    "copyright": "© 2024 Kliv. All rights reserved."
+    "copyright": "This website built and hosted with Kliv.dev"
   },
   "planContent": {
     "products": {
