--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -399,5 +399,38 @@
   },
   "breadcrumb": {
     "allInspiration": "すべてのインスピレーション"
+  },
+  "testimonials": {
+    "title": "ユーザーの声",
+    "githubIntegration": "GitHub統合が完璧に動作します。午後にポートフォリオを構築できて、とても満足しています",
+    "emmaChenAuthor": "Emma Chen",
+    "emmaChenTitle": "フロントエンド開発者",
+    "launchedFaster": "思っていたよりもずっと早くローンチできました。私が完全に行き詰まっていた認証部分をAIが解決してくれました",
+    "carlosAuthor": "Carlos",
+    "carlosTitle": "スタートアップ創設者",
+    "clientSiteUp": "数時間でクライアントサイトを立ち上げました。カスタムドメインの設定が簡単だったのが良かったです",
+    "yukiAuthor": "Yuki",
+    "yukiTitle": "フリーランサー",
+    "onlineStoreConfused": "コーディングの仕方がわからないのに、今オンラインストアを持っています？？まだちょっと混乱していますが、動いています",
+    "jenniferAuthor": "Jennifer",
+    "jenniferTitle": "中小企業経営者",
+    "noHostingAccounts": "ついに5つの異なるホスティングアカウントを管理する必要がなくなりました",
+    "alexKAuthor": "Alex K.",
+    "alexKTitle": "プロダクトマネージャー",
+    "featuresNeeded": "必要だとは知らなかった機能をいくつか構築してくれました。正直、大幅な時間節約になりました",
+    "lucasAuthor": "Lucas",
+    "lucasTitle": "起業家",
+    "learnedToCode": "私のチームは私が一晩でコーディングを覚えたと思っています（笑）。データベース関連が動作したのは驚きでした",
+    "mohamedAuthor": "Mohamed",
+    "mohamedTitle": "マーケティング",
+    "japaneseExplanation": "日本語で説明できるのが本当に助かる。他のは全部英語だから...",
+    "keikoAuthor": "Keiko",
+    "keikoTitle": "コンテンツクリエイター",
+    "ideaToLive": "アイデアから当日中にライブサイトまで。実際に役立ちます",
+    "rachelAuthor": "Rachel",
+    "rachelTitle": "コンサルタント",
+    "threeSites": "今月3つのサイトを作りました。ホスティングが含まれているのが最高の部分です",
+    "diegoAuthor": "Diego",
+    "diegoTitle": "エージェンシーオーナー"
   }
 }
