--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -399,5 +399,38 @@
   },
   "breadcrumb": {
     "allInspiration": "All inspiration"
+  },
+  "testimonials": {
+    "title": "Vad våra användare säger",
+    "githubIntegration": "GitHub-integrationen fungerar bara. byggde min portfölj på en eftermiddag, ganska nöjd med det",
+    "emmaChenAuthor": "Emma Chen",
+    "emmaChenTitle": "Frontend-utvecklare",
+    "launchedFaster": "Vi lanserade mycket snabbare än jag trodde vi skulle. AI:n löste autentiseringsgrejerna som jag var helt fast på",
+    "carlosAuthor": "Carlos",
+    "carlosTitle": "Startup-grundare",
+    "clientSiteUp": "Fick upp en klientwebbplats på några timmar. Anpassad domän var lätt att sätta upp vilket var skönt",
+    "yukiAuthor": "Yuki",
+    "yukiTitle": "Frilansare",
+    "onlineStoreConfused": "Jag kan inte koda men nu har jag en webbutik?? Fortfarande lite förvirrad men den fungerar",
+    "jenniferAuthor": "Jennifer",
+    "jenniferTitle": "Småföretagare",
+    "noHostingAccounts": "Äntligen slipper jag hantera 5 olika hostingkonton",
+    "alexKAuthor": "Alex K.",
+    "alexKTitle": "Produktchef",
+    "featuresNeeded": "Byggde några funktioner jag inte ens visste att jag behövde. sparade mig massor av tid ärligt talat",
+    "lucasAuthor": "Lucas",
+    "lucasTitle": "Entreprenör",
+    "learnedToCode": "mitt team tror att jag lärde mig koda över natten haha. databasgrejerna fungerade bara vilket var överraskande",
+    "mohamedAuthor": "Mohamed",
+    "mohamedTitle": "Marknadsföring",
+    "japaneseExplanation": "Att kunna förklara på svenska är verkligen till hjälp. Alla andra är på engelska...",
+    "keikoAuthor": "Keiko",
+    "keikoTitle": "Innehållsskapare",
+    "ideaToLive": "Gick från idé till live-webbplats samma dag. faktiskt användbart",
+    "rachelAuthor": "Rachel",
+    "rachelTitle": "Konsult",
+    "threeSites": "Gjorde 3 webbplatser den här månaden. det inkluderade hostinget är den bästa delen",
+    "diegoAuthor": "Diego",
+    "diegoTitle": "Byrå-ägare"
   }
 }
