--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -157,6 +157,11 @@
     "signupsDisabled": "Signups are disabled for this plan",
     "disabled": "Disabled"
   },
+  "billing": {
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "save20": "Save 20%"
+  },
   "about": {
     "badge": "About Us",
     "title": "Democratizing App Development",
