--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -6,7 +6,8 @@
     "blog": "ブログ",
     "signIn": "サインイン",
     "getStarted": "始める",
-    "inspiration": "インスピレーション"
+    "inspiration": "インスピレーション",
+    "howItWorks": "仕組み"
   },
   "hero": {
     "title": "AIとチャットしてアプリやウェブサイトを構築",
@@ -437,5 +438,25 @@
     "threeSites": "今月3つのサイトを作りました。含まれているホスティングが最高の部分です",
     "diegoAuthor": "Diego",
     "diegoTitle": "エージェンシーオーナー"
+  },
+  "howItWorks": {
+    "title": "Klivの仕組み",
+    "subtitle": "アイデアから本格的なアプリケーションまで、4つのシンプルなステップ",
+    "step1": {
+      "title": "アイデアを説明",
+      "description": "作りたいものを自然な言葉でKlivに伝えるだけ。技術的な専門用語は必要ありません。"
+    },
+    "step2": {
+      "title": "AIの魔法",
+      "description": "高度なAIがあなたの要求を理解し、即座にアプリケーションの作成を開始します。"
+    },
+    "step3": {
+      "title": "コード生成",
+      "description": "Klivは最新のフレームワークとベストプラクティスで、クリーンで本格的なコードを書きます。"
+    },
+    "step4": {
+      "title": "デプロイ＆公開",
+      "description": "あなたのアプリケーションは自動的にデプロイされ、世界と共有する準備が整います。"
+    }
   }
 }
