--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -6,7 +6,8 @@
     "blog": "Blogg",
     "signIn": "Logga in",
     "getStarted": "Kom igång",
-    "inspiration": "Inspiration"
+    "inspiration": "Inspiration",
+    "howItWorks": "Så fungerar det"
   },
   "hero": {
     "title": "Bygg appar och webbplatser genom att chatta med AI",
@@ -437,5 +438,25 @@
     "threeSites": "Gjorde 3 sidor den här månaden. den inkluderade hostingen är den bästa delen",
     "diegoAuthor": "Diego",
     "diegoTitle": "Byrå-ägare"
+  },
+  "howItWorks": {
+    "title": "Så fungerar Kliv",
+    "subtitle": "Från idé till liveapplikation i fyra enkla steg",
+    "step1": {
+      "title": "Beskriv din idé",
+      "description": "Berätta helt enkelt för Kliv vad du vill bygga på naturligt språk. Ingen teknisk jargong behövs."
+    },
+    "step2": {
+      "title": "AI-magi händer",
+      "description": "Vår avancerade AI förstår dina krav och börjar skapa din applikation direkt."
+    },
+    "step3": {
+      "title": "Kodgenerering",
+      "description": "Kliv skriver ren, produktionsklar kod med moderna ramverk och bästa praxis."
+    },
+    "step4": {
+      "title": "Distribuera & lansera",
+      "description": "Din applikation distribueras automatiskt och är redo att dela med världen."
+    }
   }
 }
