AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -51,6 +51,26 @@
       "close": "Close"
     }
   },
+  "howItWorks": {
+    "title": "How Kliv Works",
+    "subtitle": "From idea to reality in four simple steps",
+    "step1": {
+      "title": "Describe Your Idea",
+      "description": "Simply tell Kliv what you want to build in plain English. No technical jargon required."
+    },
+    "step2": {
+      "title": "AI Creates Your App",
+      "description": "Our AI understands your vision and generates clean, modern code using the latest technologies."
+    },
+    "step3": {
+      "title": "Real-time Preview",
+      "description": "Watch your app come to life instantly in the preview window. See every change as it happens."
+    },
+    "step4": {
+      "title": "Iterate and Perfect",
+      "description": "Continue chatting to refine features, fix issues, and perfect your application until it's exactly right."
+    }
+  },
   "features": {
     "title": "Everything you need to build amazing apps and websites",
     "subtitle": "Kliv provides a complete development environment powered by AI, making app creation accessible to everyone.",
