--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -51,6 +51,26 @@
       "close": "閉じる"
     }
   },
+  "howItWorks": {
+    "title": "Klivの仕組み",
+    "subtitle": "4つの簡単なステップでアイデアを現実に",
+    "step1": {
+      "title": "アイデアを説明",
+      "description": "作りたいものを日本語で簡単に説明するだけ。専門用語は必要ありません。"
+    },
+    "step2": {
+      "title": "AIがアプリを作成",
+      "description": "AIがあなたのビジョンを理解し、最新技術を使ってクリーンでモダンなコードを生成します。"
+    },
+    "step3": {
+      "title": "リアルタイムプレビュー",
+      "description": "プレビューウィンドウでアプリが生まれる様子をリアルタイムで確認。すべての変更が即座に表示されます。"
+    },
+    "step4": {
+      "title": "反復と完成",
+      "description": "チャットを続けて機能を改良し、問題を修正し、理想通りのアプリケーションに仕上げます。"
+    }
+  },
   "features": {
     "title": "素晴らしいアプリやウェブサイトを構築するために必要なすべて",
     "subtitle": "KlivはAI駆動の完全な開発環境を提供し、誰でもアプリ作成にアクセスできるようにします。",
