--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -51,6 +51,26 @@
       "close": "Stäng"
     }
   },
+  "howItWorks": {
+    "title": "Så fungerar Kliv",
+    "subtitle": "Från idé till verklighet i fyra enkla steg",
+    "step1": {
+      "title": "Beskriv din idé",
+      "description": "Berätta enkelt för Kliv vad du vill bygga på svenska. Ingen teknisk jargong krävs."
+    },
+    "step2": {
+      "title": "AI skapar din app",
+      "description": "Vår AI förstår din vision och genererar ren, modern kod med de senaste teknikerna."
+    },
+    "step3": {
+      "title": "Realtidsförhandsgranskning",
+      "description": "Se din app komma till liv direkt i förhandsgranskningsfönstret. Se varje förändring när den händer."
+    },
+    "step4": {
+      "title": "Iterera och förfina",
+      "description": "Fortsätt chatta för att förbättra funktioner, fixa problem och förfina din applikation tills den är perfekt."
+    }
+  },
   "features": {
     "title": "Allt du behöver för att bygga fantastiska appar och webbplatser",
     "subtitle": "Kliv tillhandahåller en komplett utvecklingsmiljö driven av AI, vilket gör appskapande tillgängligt för alla.",
