AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -72,19 +72,35 @@
     }
   },
   "features": {
-    "title": "Everything you need to build amazing apps and websites",
-    "subtitle": "Kliv provides a complete development environment powered by AI, making app creation accessible to everyone.",
-    "aiPowered": {
-      "title": "AI-Powered Development",
-      "description": "Our advanced AI understands your requirements and generates clean, production-ready code automatically."
+    "title": "Everything You Need to Build Amazing Apps",
+    "subtitle": "Stop wrestling with deployment pipelines and build configurations. Kliv handles the technical complexity so you can focus on creating.",
+    "hosting": {
+      "title": "Hosting Included",
+      "description": "No servers to manage, no deployment headaches. Your app goes live instantly with lightning-fast global CDN."
     },
-    "realtime": {
-      "title": "Real-time Preview",
-      "description": "See your app or website come to life instantly as you chat with the AI. No waiting, no compilation."
+    "domain": {
+      "title": "Your Own Domain",
+      "description": "Connect your custom domain with one click. Professional URLs that reflect your brand."
     },
-    "responsive": {
-      "title": "Mobile-First Design",
-      "description": "Every project is built with responsive design principles, looking great on all devices."
+    "github": {
+      "title": "GitHub Sync",
+      "description": "Keep your source code safe. Enable GitHub syncing to maintain full ownership and version history."
+    },
+    "ai": {
+      "title": "AI Builds For You",
+      "description": "Describe your vision and watch it come to life. Our AI understands your requirements and creates production-ready code."
+    },
+    "editing": {
+      "title": "Code & Preview",
+      "description": "Edit your source code directly if you want. See results instantly with live preview - no refresh needed."
+    },
+    "snapshots": {
+      "title": "Time Travel",
+      "description": "Every change is snapshotted. Made a mistake? Go back to any previous version with one click."
+    },
+    "mobile": {
+      "title": "Mobile First",
+      "description": "Built responsive from the ground up. Your apps look perfect on every device, every time."
     },
     "page": {
       "badge": "Features",
