AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -72,7 +72,7 @@
     }
   },
   "features": {
-    "title": "Everything You Need to Build Amazing Apps",
+    "title": "Powerful Features",
     "subtitle": "Stop wrestling with deployment pipelines and build configurations. Kliv handles the technical complexity so you can focus on creating.",
     "hosting": {
       "title": "Hosting Included",
