--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -72,7 +72,7 @@
     }
   },
   "features": {
-    "title": "素晴らしいアプリやウェブサイトを構築するために必要なすべて",
+    "title": "強力な機能",
     "subtitle": "KlivはAI駆動の完全な開発環境を提供し、誰でもアプリ作成にアクセスできるようにします。",
     "aiPowered": {
       "title": "AI駆動開発",
