--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -72,7 +72,7 @@
     }
   },
   "features": {
-    "title": "Allt du behöver för att bygga fantastiska appar och webbplatser",
+    "title": "Kraftfulla funktioner",
     "subtitle": "Kliv tillhandahåller en komplett utvecklingsmiljö driven av AI, vilket gör appskapande tillgängligt för alla.",
     "aiPowered": {
       "title": "AI-driven utveckling",
