AI-generated changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -10,7 +10,7 @@
     "howItWorks": "How it works"
   },
   "hero": {
-    "title": "Build apps and websites by chatting with AI",
+    "title": "Type in the box to make any website or app",
     "subtitle": "Describe your idea and watch Kliv create a fully functional application or website in minutes. No coding required.",
     "placeholder": "Describe the app or website you want to build...",
     "typingExamples": [
