--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -10,7 +10,7 @@
     "howItWorks": "仕組み"
   },
   "hero": {
-    "title": "AIとチャットしてアプリやウェブサイトを構築",
+    "title": "ボックスに入力して任意のウェブサイトやアプリを作成",
     "subtitle": "あなたのアイデアを説明すると、Klivが数分で完全に機能するアプリケーションやウェブサイトを作成します。コーディングは不要です。",
     "placeholder": "構築したいアプリやウェブサイトを説明してください...",
     "typingExamples": [
