--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -10,7 +10,7 @@
     "howItWorks": "Så fungerar det"
   },
   "hero": {
-    "title": "Bygg appar och webbplatser genom att chatta med AI",
+    "title": "Skriv i rutan för att skapa vilken webbplats eller app som helst",
     "subtitle": "Beskriv din idé och se Kliv skapa en fullt fungerande applikation eller webbplats på några minuter. Ingen kodning krävs.",
     "placeholder": "Beskriv appen eller webbplatsen du vill bygga...",
     "typingExamples": [
